Added GeckoLib and SBL Added HylianRaidsEnUsLanguageProvider and en_us.json Added Ganon

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.debug=false
 #read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
 neogradle.subsystems.parchment.minecraftVersion=1.20.4
-neogradle.subsystems.parchment.mappingsVersion=2024.02.25
+neogradle.subsystems.parchment.mappingsVersion=2024.04.14
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
@@ -42,3 +42,7 @@ mod_authors=Thomas Glasser
 mod_credits=ZacIsToasty
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Adds Zelda themed Boss Fights
+
+# Dependencies
+sbl_version=1.12
+geckolib_version=4.4.4
