--- a/gradle.properties
+++ b/gradle.properties
@@ -46,3 +46,8 @@ mod_description=Adds Zelda themed Boss Fights
 # Dependencies
 sbl_version=1.12
 geckolib_version=4.4.4
+
+# Runtime
+jade_version=13.3.1
+rei_version=14.1.714
+cloth_config_version=13.0.121
