--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,4 @@ public net.minecraft.data.models.BlockModelGenerators modelOutput # modelOutput
 public net.minecraft.data.models.BlockModelGenerators delegateItemModel(Lnet/minecraft/world/level/block/Block;Lnet/minecraft/resources/ResourceLocation;)V # delegateItemModel
 public net.minecraft.data.models.BlockModelGenerators blockStateOutput # blockStateOutput
 public-f net.minecraft.world.level.block.entity.BlockEntityType validBlocks # validBlocks
+public net.minecraft.world.entity.LivingEntity getCurrentSwingDuration()I # getCurrentSwingDuration
